# afids-regRF

./: LICENSE  README.md  benchmark_pandas.py  pyproject.toml
afids_regrf/: __init__.py  apply.py  train.py  utils.py
afids_regrf/modelling/config/: config.yml
afids_regrf/modelling/resources/: dataset_description_features.json  dataset_description_models.json  dummy.fcsv  feature_offsets.npz
afids_regrf/modelling/workflow/scripts/: data_store.py  imresize.py  train.py
afids_regrf/notebooks/: auto-afids_refactor_train.ipynb
afids_regrf/registration/config/: config.yml
afids_regrf/registration/resources/: dataset_description_mni_space.json
afids_regrf/registration/workflow/envs/: mapping.yaml
afids_regrf/registration/workflow/rules/: mniTransform.smk  mniTransform_withbet.smk
afids_regrf/registration/workflow/scripts/: tform_script.py
afids_regrf/resources/: __init__.py  tpl-MNI152NLin2009cAsym_res-01_desc-groundtruth_afids.fcsv
afids_regrf/train_workflow/config/: snakebids.yml
afids_regrf/train_workflow/workflow/: Snakefile
afids_regrf/train_workflow/workflow/scripts/: assemble_models.py
dummy/: csv
modelling/workflow/: Snakefile
modelling/workflow/rules/: modelTraining.smk
notebooks/: auto-afids_refactor_dev_test.ipynb
notebooks/.ipynb_checkpoints/: auto-afids_refactor_dev_compare-checkpoint.ipynb  auto-afids_refactor_dev_test-checkpoint.ipynb
registration/resources/: dataset_description_afids.json
registration/workflow/: Snakefile  registration_decoupling.py
registration/workflow/scripts/commonsmk/: __init__.py  setup.py
(+1 files in other folders)
