[tool.poetry]
name = "afids-regrf"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "afids_regrf"}]

[tool.poetry.scripts]
afids_regrf_train = "afids_regrf.train:main"
afids_regrf_apply = "afids_regrf.apply:main"

[tool.poetry.dependencies]
python = ">3.8.1,<4"
nibabel = "^5.0.1"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
joblib = "^1.2.0"
importlib-resources = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pyright = "^1.1.294"

[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
